trying to get Hound to be more gentle

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,5 +1,8 @@
 Style/FrozenStringLiteralComment:
   Enabled: false
 
-Layout/TrailingBlankLines:
+Layout/TrailingEmptyLines:
   Enabled: false
+
+Style/StringLiterals:
+  EnforcedStyle: single_quotes
